--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     
                 </div>
                 <div class="inner-image">
-                    <img src="./asset/image/features2.jpg" alt="">
+                    <img src="./asset/image/logo.png" alt="">
                 </div>
             </div>
         </div>
